src/objects/BMCServiceDesk__LookupFilterCriteria__c.object
<CustomObject>
    <description>This object allows you to store data for lookup filter criteria conditions.</description>
    <fields>
        <fullName>BMCServiceDesk__DataType__c</fullName>
        <label>DataType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKLookupFilter__c</fullName>
        <label>Lookup Filter</label>
        <referenceTo>BMCServiceDesk__LookupFilter__c</referenceTo>
        <relationshipLabel>Lookup Filter Criterias</relationshipLabel>
        <relationshipName>Lookup_Filter_Criterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FieldName__c</fullName>
        <description>This field stores the API name of the field on which the lookup filter criteria is defined.</description>
        <inlineHelpText>Enter the value to define the lookup filter criteria.</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsValueField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Value Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Operator__c</fullName>
        <description>This field stores the operator of filter criteria condition.</description>
        <inlineHelpText>From the list of options, select the value for the operator of filter criteria condition.</inlineHelpText>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OrderIndex__c</fullName>
        <description>This field stores conditions for the order of filter criteria.</description>
        <inlineHelpText>From the list of options, select the preferred order to set the filter criteria.</inlineHelpText>
        <label>Order Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Value__c</fullName>
        <description>This field stores the value of filter criteria condition.</description>
        <inlineHelpText>From the list of options, select the value for the filter criteria condition.</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lookup Filter Criteria</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Lookup Filter Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Filter Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>